Add arrows controls

--- a/app/components/select/select.scss
+++ b/app/components/select/select.scss
@@ -72,6 +72,10 @@ $border-color: #ccc;
       transition: 0.15s background-color ease-in;
     }
 
+    &:focus {
+      background-color: #eee;
+    }
+
     &.is-selected {
       background-color: bisque;
     }
